<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    <PreferenceCategory android:title="GENERAL">-->
    <!--        <SwitchPreference-->
    <!--            android:icon="@drawable/ic_image"-->
    <!--            android:summary="Save Images to Gallery"-->
    <!--            android:title="Files" />-->
    <!--    </PreferenceCategory>-->

    <PreferenceCategory android:title="THEME">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_system_theme"
            android:title="Use system theme" />
        <ListPreference
            android:defaultValue="@string/dark_theme"
            android:entries="@array/themes"
            android:entryValues="@array/themes"
            android:key="@string/key_default_theme"
            android:title="Default app theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="ABOUT">

        <Preference
            android:icon="@drawable/ic_info"
            android:summary="version 1.0.0"
            android:title="@string/app_name" />

        <Preference
            android:key="@string/key_developer"
            android:icon="@drawable/ic_developer"
            android:summary="This app was designed and developed by Nikhil Verma and Prashant Singh"
            android:title="About Developer" />
        <Preference
            android:icon="@drawable/ic_thumbs_up"
            android:key="@string/preference_rate_us"
            android:summary="If you loved the app. please leave a 5 star review:)"
            android:title="Rate DocScan" />

        <Preference
            android:icon="@drawable/ic_doc"
            android:key="@string/preference_privacy_policy"
            android:summary="Read our privacy policy"
            android:title="Privacy policy" />

        <Preference
            android:icon="@drawable/ic_feedback"
            android:key="@string/preference_feedback"
            android:summary="@string/feedback_message"
            android:title="Feedback" />

    </PreferenceCategory>
</PreferenceScreen>